--- a/aduboffour_joseph--final-project/src/App.css
+++ b/aduboffour_joseph--final-project/src/App.css
@@ -175,7 +175,7 @@
 .contact_form_para
 {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 100;
     color: white;
     margin-top: -35px;
@@ -199,6 +199,7 @@
     color: white;
     border: none;
     outline: none;
+    margin-right: 10px;
 }
 
 .contact_form_email
