--- a/aduboffour_joseph--final-project/src/App.css
+++ b/aduboffour_joseph--final-project/src/App.css
@@ -80,7 +80,6 @@
     background-repeat: no-repeat;
     height: 100%;
     position: relative;
-    border: solid thick black;
 }
 
 .homepage_bodyhdr
@@ -470,7 +469,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100%;   
+    height: 100%;
 }
 
 .portfolio_h
@@ -487,7 +486,7 @@
 {
     width: 100%;
     height: 100%;
-
+    background-color: black;
 }
 .portfolio_section_img
 {
@@ -499,6 +498,7 @@
 {
     width: 100%;
     height: 100%;
+    background-color: black;
 }
 .portfolio_section2_img
 {
@@ -510,6 +510,7 @@
 {
     width: 100%;
     height: 100%;
+    background-color: black;
 }
 .portfolio_section3_img
 {
@@ -521,6 +522,8 @@
 {
     width: 100%;
     height: 100%;
+    background-color: black;
+    
 }
 .portfolio_section4_img
 {
@@ -532,6 +535,7 @@
 {
     width: 100%;
     height: 100%;
+    background-color: black;
 }
 .portfolio_section5_img
 {
@@ -545,8 +549,8 @@
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 13px;
     color: rgb(92, 222, 240);
-    margin-bottom: 100px;
-    margin-left: 850px;
+    margin-top: 50px;
+    margin-left: 950px;
     text-decoration: none;
     border: 1px solid rgb(92, 222, 240);
     display: inline-block;
